@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Mon Jun 26 17:16:42 CEST 2006
-build.number=106
+#Mon Jun 26 18:16:55 CEST 2006
+build.number=107
